[package]
name = "aigu-seed"
version = "0.1.0"
authors = ["allan2"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
web-sys = { version = "0.3.51", features=["IntersectionObserver", "IntersectionObserverInit", "Element", "Document"] }
js-sys = { version = "0.3.51" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
